fix: ajout des logos dans skills + fetch pour le form

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -52,8 +52,28 @@
 
     li {
       font-size: 20px;
-      list-style: none;
+
+      img {
+        width: 48px;
+      }
     }
+  }
+
+  .tech-line {
+    list-style-type: disc !important;
+    margin-left: 30px;
+    margin-top: 0.5rem;
+  }
+
+  .tech-line li {
+    padding-left: 5px;
+  }
+
+  .tech-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
   }
 
   .frontend-box {
