--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -76,6 +76,11 @@
         color: $color-primary;
         background-color: #050319;
         font-size: 20px;
+
+        &:hover {
+          background-color: rgb(28, 28, 87);
+          cursor: pointer;
+        }
       }
     }
   }
