--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -176,10 +176,6 @@
       li {
         font-size: 18px;
       }
-
-      .skills-title {
-        background-attachment: scroll;
-      }
     }
 
     .backend-box {
@@ -195,6 +191,10 @@
 @media (min-width: 320px) and (max-width: 768px) {
   .skills-container {
     margin-top: 100px;
+
+    .skills-title {
+      background-attachment: scroll;
+    }
 
     h2 {
       font-size: 30px;
@@ -214,7 +214,15 @@
 
       li {
         font-size: 16px;
+
+        img {
+          width: 46px;
+        }
       }
+    }
+
+    .tech-item {
+      gap: 15px;
     }
 
     .frontend-box {
