ajout hover color red footer nav

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -106,6 +106,10 @@
       cursor: pointer;
     }
   }
+
+  a:hover {
+    color: red;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
